--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -54,7 +54,7 @@
                         <button class="btn btn-primary" type="button" (click)="clear()">
                             <em class="glyphicon glyphicon-erase"></em> Clear
                         </button>
-                        <button class="btn btn-primary" type="button" (click)="match(purpose, consent)">
+                        <button class="btn btn-primary" type="button" (click)="match()">
                             <em class="glyphicon glyphicon-cog"></em> Match
                         </button>
                     </div>
