--- a/src/app/assets/css/style.less
+++ b/src/app/assets/css/style.less
@@ -1,6 +1,6 @@
 @baseColor : #81A881;
 @frameColor : #fff;
-@bodyColor:#D9E4CE;
+@bodyColor:#ffffff;
 @articleImgHeight : 250px;
 
 
@@ -19,7 +19,7 @@
     .row{
         margin-right:0px;
         margin-left: 0px;
-    }   
+    }
     .col-xs-12{
         padding-right: 1px;
         padding-left: 1px;
@@ -27,10 +27,10 @@
     .block-ellipsis {
         .blockEllipsisMixin(8%);
     }
-    
+
    .article-img-height{
-       .articleImgHeight(); 
-    }  
+       .articleImgHeight();
+    }
 }
 
 /* sm */
@@ -47,18 +47,18 @@
     .row{
         margin-right:0px;
         margin-left: 0px;
-    }    
+    }
     .col-sm-12{
         padding-right: 1px;
-        padding-left: 1px;        
+        padding-left: 1px;
     }
     .block-ellipsis {
         .blockEllipsisMixin(9%);
     }
-    
+
     .article-img-height{
-       .articleImgHeight();   
-    }  
+       .articleImgHeight();
+    }
 }
 
 /* md */
@@ -67,8 +67,8 @@
         font-size: 1.2em;
     }
     .article-img-height{
-       .articleImgHeight();  
-    }  
+       .articleImgHeight();
+    }
 }
 
 /* lg */
@@ -78,12 +78,12 @@
     }
     .block-ellipsis {
         .blockEllipsisMixin(5.8%);
-    } 
-    
+    }
+
     .article-img-height{
-       .articleImgHeight();  
-    }   
-    
+       .articleImgHeight();
+    }
+
 }
 
 
@@ -117,31 +117,31 @@
     width: 100%;
 }
 
-.footer{    
+.footer{
     left:0;
     bottom:0;
     width:100%;
     min-height: 50px;
     max-height: 200px;
-    background: @frameColor;    
+    background: @frameColor;
     position: absolute;
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
     border-top: 2px solid @baseColor;
     top:100%;
     margin-top: 85px;
-    
+
 }
 
 .footer-line{
-    border-color: @baseColor; 
+    border-color: @baseColor;
     border-style: solid none;
     border-width: 1px;
 }
 
 /* common */
 .component-main-container{
-    background-color:@frameColor;   
+    background-color:@frameColor;
 }
 
 .process-frame{
@@ -152,7 +152,7 @@
 .nav-bar-fixed{
     position:fixed;
     width:100%;
-    z-index:100;  
+    z-index:100;
 }
 
 .base-frame-header{
@@ -161,7 +161,7 @@
 }
 
 .img-news-iterated{
-    width:100%;    
+    width:100%;
 }
 
 .img-news-iterared-height{
@@ -170,11 +170,11 @@
 
 
 .frame-container{
-    background-color: @baseColor;   
+    background-color: @baseColor;
 }
 
-.frame-top{   
-    background-color: @baseColor;    
+.frame-top{
+    background-color: @baseColor;
 }
 
 .frame{
@@ -201,7 +201,7 @@ body {
 }
 
 .footer_font_float_bottom{
-    bottom: 0;  
+    bottom: 0;
     margin-top: 0px;
     text-align: center;
 }
@@ -226,7 +226,7 @@ body {
 }
 
 .news-contained{
-    padding-left: 15px; 
+    padding-left: 15px;
     padding-right: 15px;
     margin-bottom: 15px;
 }
@@ -236,7 +236,7 @@ body {
 }
 
 .button-back-single-news{
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     margin-right: 15px;
 }
 
