--- a/src/app/components/darjson/darjson.html
+++ b/src/app/components/darjson/darjson.html
@@ -1,10 +1,6 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">Structured Purpose</h3>
-    </div>
-    <div class="panel-body">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rp-group">
-            <textarea class="form-control" [(ngModel)]="darJson" (change)="onDarJsonChange($event)" rows="10"></textarea>
-        </div>
-    </div>
+<div class="panel-heading cm-boxhead access-color">
+    <h4 class="panel-title access-color"><b>Structured DAR Restrictions</b></h4>
+</div>
+<div class="panel-body cm-boxbody no-margin">
+    <textarea class="form-control col-lg-12 col-md-12 col-sm-12 col-xs-12" [(ngModel)]="darJson" (change)="onDarJsonChange($event)" rows="5"></textarea>
 </div>
