--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -1,68 +1,72 @@
 <style type='text/css'>
+
+    .container-fluid{
+        background: #ffffff;
+        margin: 0!important;
+        padding: 0!important
+    }
+
+    .BroadLogo{
+        max-height: 40px;
+        margin-top: 5px;
+    }
+
+    .MainTitle{
+        text-align: right;
+        font-size: 30px;
+        font-weight: bold;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+
     ul {
         margin-top: -40px;
     }
-    
+
     ul li {
         display: inline;
     }
-    
-    .title {
-        position: relative;
-        text-align: right;
-        display: block;
-        font-size: 47px;
-        font-weight: bold;
-        opacity: 0.2;
-        z-index: 2;
-    }
+
 </style>
 <div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <img src="/app/assets/images/broad_logo.png">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <img src="/app/assets/images/broad_logo.png" class="BroadLogo">
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <span class='title'>CONSENT MATCH TOOL</span>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                    <h3 class="MainTitle common-color">Data Use Restrictions | Match Tool</h3>
                 </div>
             </div>
         </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="panel-body" style="background-color: #f2f2f2; ">
+            <div class="row fsi-row-lg-level fsi-row-md-level">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 panel panel-primary cm-boxes">
                     <consentq (consentFormReady)="processConsentForm($event)"></consentq>
                 </div>
-                <div class="panel col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 panel panel-primary cm-boxes">
                     <darq (darFormReady)="processDarForm($event)"></darq>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="row fsi-row-lg-level fsi-row-md-level">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 panel panel-primary cm-boxes">
                     <consentjson [consentJson]="consentJson" (consentChanged)="processConsentJsonChange($event)"></consentjson>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 panel panel-primary cm-boxes">
                     <darjson [darJson]="darJson" (darChanged)="processDarJsonChange($event)"></darjson>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-offset-5 col-sm-2 text-center">
-                    <div class="btn-group" data-toggle="buttons">
-                        <button class="btn btn-primary" type="button" (click)="clear()">
-                            <em class="glyphicon glyphicon-erase"></em> Clear
-                        </button>
-                        <button class="btn btn-primary" type="button" (click)="match()">
-                            <em class="glyphicon glyphicon-cog"></em> Match
-                        </button>
-                    </div>
-                </div>
+                <button class="col-lg-2 col-lg-offset-5 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12 btn btn-primary common-background" style="padding-top: 10px; padding-bottom: 10px; font-size: 18px; margin-bottom: 15px;" type="button" (click)="match(purpose, consent)">
+                    Match
+                </button>
             </div>
 
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12 panel panel-primary">
                     <results [results]="results"></results>
                 </div>
             </div>
