--- a/src/app/components/results/results.html
+++ b/src/app/components/results/results.html
@@ -1,10 +1,6 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">Match Results</h3>
-    </div>
-    <div class="panel-body">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rp-group">
-            <textarea class="form-control" [(ngModel)]="results" name="results" rows="10"></textarea>
-        </div>
-    </div>
+<div class="panel-heading cm-boxhead">
+    <h4 class="panel-title common-color">Match Results</h4>
+</div>
+<div class="panel-body cm-boxbody no-margin">
+    <textarea class="form-control col-lg-12 col-md-12 col-sm-12 col-xs-12" [(ngModel)]="results" name="results" rows="5"></textarea>
 </div>
