--- a/src/app/components/darq/darq.html
+++ b/src/app/components/darq/darq.html
@@ -14,9 +14,9 @@
                 <div class="checkbox">
                     <input [(ngModel)]="dar.diseases" id="checkDiseases" ngControl="diseases" #diseases type="checkbox" class="checkbox-inline"
                     name="checkDiseases">
-                    <label class="regular-checkbox" for="checkDiseases"><b>2.4.1 Disease-related studies: </b> The primary purpose of the research is to learn more
-                        about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure),
-                        or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders).
+                    <label class="regular-checkbox" for="checkDiseases"><b>2.4.1 Disease-related studies: </b> The primary purpose of the research is to learn more about a particular
+                        disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related
+                        conditions (e.g., autoimmune diseases, psychiatric disorders).
                     </label>
                 </div>
             </div>
@@ -25,10 +25,10 @@
                 <div class="checkbox">
                     <input [(ngModel)]="dar.methods" id="checkMethods" ngControl="methods" #methods type="checkbox" class="checkbox-inline" name="checkMethods">
                     <label class="regular-checkbox data-restrictions-qs" for="checkMethods">
-                        <b>2.4.2 Methods development and validation studies: </b> The primary purpose of the research
-                        is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing
-                        more powerful methods to detect epistatic, gene-environment, or other types of complex interactions
-                        in genome-wide association studies). Data will be used for developing and/or validating new methods.
+                        <b>2.4.2 Methods development and validation studies: </b> The primary purpose of the research is
+                        to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more
+                        powerful methods to detect epistatic, gene-environment, or other types of complex interactions in
+                        genome-wide association studies). Data will be used for developing and/or validating new methods.
                     </label>
                 </div>
             </div>
@@ -38,8 +38,8 @@
                     <input [(ngModel)]="dar.controls" id="checkControls" ngControl="controls" #controls type="checkbox" class="checkbox-inline"
                     name="checkControls">
                     <label class="regular-checkbox" for="checkControls">
-                        <b>2.4.3 Controls: </b> The reason for this request is to increase the number of controls
-                        available for a comparison group (e.g., a case-control study).
+                        <b>2.4.3 Controls: </b> The reason for this request is to increase the number of controls available
+                        for a comparison group (e.g., a case-control study).
                     </label>
                 </div>
             </div>
@@ -49,9 +49,8 @@
                     <input [(ngModel)]="dar.population" id="checkPopulation" ngControl="population" #population type="checkbox" class="checkbox-inline rp-checkbox"
                     name="checkPopulation">
                     <label class="regular-checkbox" for="checkPopulation">
-                        <b>2.4.4 Population structure or normal variation studies: </b> The primary purpose of
-                        the research is to understand variation in the general population (e.g., genetic substructure
-                        of a population).
+                        <b>2.4.4 Population structure or normal variation studies: </b> The primary purpose of the research
+                        is to understand variation in the general population (e.g., genetic substructure of a population).
                     </label>
                 </div>
             </div>
@@ -62,7 +61,41 @@
                     <label class="regular-checkbox" for="checkOther"><b>2.4.5 Other:</b></label>
                 </div>
             </div>
-            <input [(ngModel)]="dar.othertext" ngControl="othertext" #othertext type="text" name="inputOther" class="form-control vote-input" id="inputOther" placeholder="If selected, please specify.">
+            <input [(ngModel)]="dar.othertext" ngControl="othertext" #othertext type="text" name="inputOther" class="form-control vote-input"
+            id="inputOther" placeholder="If selected, please specify.">
+             
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
+                </label>
+            </div>
+              
+            <pre>Ontologies: {{ontologiesSelectedLabels | json}}</pre>
+           
+            
+            <div class="row">               
+                <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <input [(ngModel)]="asyncSelected"
+                        [typeahead]="getAsyncData(getContext())" 
+                        [typeaheadOptionField]="'label'" 
+                        (typeaheadOnSelect)="typeaheadOnSelect($event)"
+                        (typeaheadLoading)="changeTypeaheadLoading($event)"
+                        (typeaheadNoResults)="changeTypeaheadNoResults($event)"
+                        (typeaheadMinLength)="3" 
+                        [typeaheadWaitMs]="400" placeholder="Choose any number of Disease Ontology or none."
+                        class="form-control">
+                </div>
+                <button type="button" (click)="clearOntologies()" class="col-lg-3 col-md-3 col-sm-12 col-xs-12 btn" style="background-color: #cccccc; color: #666666;">
+                    Clear ontologies
+                </button>
+            </div>
+            
+            
+            <div [hidden]="typeaheadLoading!==true">
+                <i class="glyphicon glyphicon-refresh ng-hide" style=""></i>
+            </div>
+            <div [hidden]="typeaheadNoResults!==true" class="" style="">
+                <i class="glyphicon glyphicon-remove"></i> No Results Found
+            </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <label class="control-label f-left access-color" style="margin-top: 10px;">3. Research Purpose Statement</label>
@@ -89,39 +122,34 @@
                 </label>
             </div>
             <div class="radio-inline">
-                <input ngControl="onegender" #onegender value="true" type="radio"
-                [ngModel]="{checked: dar.onegender === 'true' ? '' : null}"
-                (change)="dar.onegender=$event.target.value" class="regular-radio" id="oneGenderYes" name="onegender"
-                required>
+                <input ngControl="onegender" #onegender value="true" type="radio" [ngModel]="{checked: dar.onegender === 'true' ? '' : null}"
+                (change)="dar.onegender=$event.target.value" class="regular-radio" id="oneGenderYes" name="onegender" required>
                 <label for="oneGenderYes"></label>
                 <label for="oneGenderYes" class="radio-button-text">Yes</label>
             </div>
             <div class="radio-inline">
-                <input ngControl="onegender" #onegender value="false" type="radio"
-                [ngModel]="{checked: dar.onegender === 'false' ? '' : null}"
-                (change)="dar.onegender=$event.target.value" class="regular-radio" id="oneGenderNo" name="onegender"
-                required>
+                <input ngControl="onegender" #onegender value="false" type="radio" [ngModel]="{checked: dar.onegender === 'false' ? '' : null}"
+                (change)="dar.onegender=$event.target.value" class="regular-radio" id="oneGenderNo" name="onegender" required>
                 <label for="oneGenderNo"></label>
                 <label for="oneGenderNo" class="radio-button-text">No</label>
             </div>
             <div class="multi-step-fields">
                 <span>Please specify</span>
                 <div class="radio-inline">
-                    <input ngControl="gender" [ngModel]="{checked: dar.gender === 'F' ? '' : null}"
-                    (change)="dar.gender=$event.target.value"
+                    <input ngControl="gender" [ngModel]="{checked: dar.gender === 'F' ? '' : null}" (change)="dar.gender=$event.target.value"
                     value="F" type="radio" class="regular-radio" id="genderFemale" name="gender">
                     <label for="genderFemale"></label>
                     <label for="genderFemale" class="radio-button-text">Female</label>
                 </div>
                 <div class="radio-inline">
-                    <input ngControl="gender" [ngModel]="{checked: dar.gender === 'M' ? '' : null}"
-                    (change)="dar.gender=$event.target.value"
+                    <input ngControl="gender" [ngModel]="{checked: dar.gender === 'M' ? '' : null}" (change)="dar.gender=$event.target.value"
                     value="M" type="radio" class="regular-radio" id="genderMale" name="gender">
                     <label for="genderMale"></label>
                     <label for="genderMale" class="radio-button-text">Male</label>
                 </div>
             </div>
         </div>
+
         <div class="form-group">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <label class="control-label rp-choice-questions">3.1.3 Please indicate if this study is restricted to a pediatric population (under the age of 18)?</label>
@@ -204,15 +232,13 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="radio-inline">
                     <input ngControl="stigmatizediseases" [ngModel]="{checked: dar.stigmatizediseases === true ? '' : null}" (change)="dar.stigmatizediseases=$event.target.value"
-                    value=true type="radio" class="regular-radio" id="stigmatizeDiseasesYes" name="stigmatizediseases"
-                    required>
+                    value=true type="radio" class="regular-radio" id="stigmatizeDiseasesYes" name="stigmatizediseases" required>
                     <label for="stigmatizeDiseasesYes"></label>
                     <label for="stigmatizeDiseasesYes" class="radio-button-text">Yes</label>
                 </div>
                 <div class="radio-inline">
                     <input ngControl="stigmatizediseases" [ngModel]="{checked: dar.stigmatizediseases === false ? '' : null}" (change)="dar.stigmatizediseases=$event.target.value"
-                    value=false type="radio" class="regular-radio" id="stigmatizeDiseasesNo" name="stigmatizediseases"
-                    required>
+                    value=false type="radio" class="regular-radio" id="stigmatizeDiseasesNo" name="stigmatizediseases" required>
                     <label for="stigmatizeDiseasesNo"></label>
                     <label for="stigmatizeDiseasesNo" class="radio-button-text">No</label>
                 </div>
@@ -220,8 +246,7 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <label class="control-label rp-choice-questions">3.1.8 Does the study target a vulnerable population as defined in 456 CFR (children, prisoners, pregnant
-                    women, mentally disabled persons, or [SIGNIFICANTLY] economically or educationally disadvantaged
-                    persons)?
+                    women, mentally disabled persons, or [SIGNIFICANTLY] economically or educationally disadvantaged persons)?
                 </label>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -279,8 +304,8 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <label class="control-label rp-choice-questions">3.1.11 Does the research correlate ethnicity, race, or gender with genotypic or other phenotypic variables,
-                    for purposes beyond biomedical or health-related research, or in ways that are not easily related
-                    to Health? </label>
+                    for purposes beyond biomedical or health-related research, or in ways that are not easily related to
+                    Health? </label>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="radio-inline">
