--- a/src/app/components/consentq/consentq.html
+++ b/src/app/components/consentq/consentq.html
@@ -27,9 +27,7 @@
                 <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
                 </label>
             </div>
-              
             <pre>Ontologies: {{ontologiesSelectedLabels | json}}</pre>
-          
             <div class="row">               
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <input [(ngModel)]="asyncSelected"
@@ -38,24 +36,21 @@
                         (typeaheadOnSelect)="typeaheadOnSelect($event)"
                         (typeaheadLoading)="changeTypeaheadLoading($event)"
                         (typeaheadNoResults)="changeTypeaheadNoResults($event)"
-                        (typeaheadMinLength)="3" 
-                        [typeaheadWaitMs]="400" placeholder="Choose any number of Disease Ontology or none."
+                        [typeaheadOptionsLimit]="100"
+                        placeholder="Choose any number of Disease Ontology or none."
                         class="form-control">
                 </div>
                 <button type="button" (click)="clearOntologies()" class="col-lg-3 col-md-3 col-sm-12 col-xs-12 btn" style="background-color: #cccccc; color: #666666;">
                     Clear ontologies
                 </button>
             </div>
-          
+  
             <div [hidden]="typeaheadLoading!==true">
                 <i class="glyphicon glyphicon-refresh ng-hide" style=""></i>
             </div>
             <div [hidden]="typeaheadNoResults!==true" class="" style="">
                 <i class="glyphicon glyphicon-remove"></i> No Results Found
             </div>
-            
-            
-
             <div class="form-group">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="checkbox">
