remove ontology div

--- a/src/app/components/darq/darq.html
+++ b/src/app/components/darq/darq.html
@@ -55,12 +55,6 @@
                 </div>
             </div>
 
-  <!--          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="checkbox">
-                    <input [(ngModel)]="dar.other" id="checkOther" ngControl="other" (change)="submitDarForm()" type="checkbox" class="checkbox-inline" name="checkOther">
-                    <label class="regular-checkbox" for="checkOther"><b>2.4.5 Other:</b></label>
-                </div>
-            </div> -->
             <b>2.4.5 Other:</b>
             <input [(ngModel)]="dar.othertext" ngControl="othertext" #othertext type="text" name="inputOther" class="form-control vote-input"
             id="inputOther" placeholder="If selected, please specify.">
@@ -97,7 +91,7 @@
             </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label f-left access-color" style="margin-top: 10px;">3. Research Purpose Statement</label>
+                <label class="control-label f-left access-color" style="margin-top: 10px; display:block">3. Research Purpose Statement</label>
                 <label class="control-label rp-choice-questions">3.1.1 Will this data be used exclusively or partially for a commercial purpose?</label>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
