--- a/src/app/components/consentq/consentq.html
+++ b/src/app/components/consentq/consentq.html
@@ -15,16 +15,8 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <label class="control-label rp-choice-questions" for="diseaseRestrictions">Future use is limited to research involving the following disease area(s):</label>
-                </div>
-                <input [(ngModel)]="orsp.diseaseRestrictions" ngControl="diseaseRestrictions" #diseaseRestrictions type="text" name="diseaseRestrictions"
-                class="form-control vote-input" id="diseaseRestrictions" placeholder="Please specify which diseases">
-            </div>
-            
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label rp-choice-questions">Future use is limited to research involving the following disease area(s):
                 </label>
             </div>
             <pre>Ontologies: {{ontologiesSelectedLabels | json}}</pre>
