--- a/src/app/dar-qs/dar-qs.component.css
+++ b/src/app/dar-qs/dar-qs.component.css
@@ -11,3 +11,9 @@
 label .mat-checkbox-layout {
     flex-wrap: wrap;
 }
+
+.duos-box {
+    border: 1px solid rgb(180, 180, 180);
+    padding: 1em;
+    border-radius: 0.8em;
+}
