--- a/src/app/dar-qs/dar-qs.component.html
+++ b/src/app/dar-qs/dar-qs.component.html
@@ -62,7 +62,8 @@
                     <mat-checkbox formControlName="hmb">
                         <b>2.4.5 Health/medical/biomedical research: </b>
                     </mat-checkbox>
-                    <span>The primary purpose of the study is to investigate a health/medical/biomedical (or biological) phenomenon or condition.
+                    <span>The primary purpose of the study is to investigate a health/medical/biomedical (or biological) phenomenon
+                        or condition.
                     </span>
                 </div>
 
@@ -70,7 +71,8 @@
                     <mat-checkbox formControlName="poa">
                         <b>2.4.6 Population origins or ancestry research: </b>
                     </mat-checkbox>
-                    <span>The outcome of this study is expected to provide new knowledge about the origins of a certain population or its ancestry.
+                    <span>The outcome of this study is expected to provide new knowledge about the origins of a certain population
+                        or its ancestry.
                     </span>
                 </div>
 
@@ -84,14 +86,30 @@
 
             </div>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
-                </label>
+            <div class="duos-box">
+                <div>
+                    <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
+                    </label>
+                </div>
+
+                <mat-form-field class="example-chip-list">
+                    <mat-chip-list #chipList>
+                        <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable" (removed)="remove(fruit)">
+                            {{fruit}}
+                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                        </mat-chip>
+                        <input placeholder="New fruit..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+                    </mat-chip-list>
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="typeaheadOnSelect($event)">
+                        <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+                            {{fruit}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
             </div>
 
-            <pre>Ontologies: {{ontologiesSelectedLabels | json}}</pre>
-
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <p-autoComplete formControlName="ontologiesSelectedLabels" name="ontologiesSelectedLabels" [suggestions]="ontologies" (completeMethod)="getFilteredOntologies($event)"
                         styleClass="wid100" [minLength]="3" placeholder="Choose any number of Disease Ontology or none." field="label"
@@ -109,122 +127,127 @@
 
             <div [hidden]="typeaheadNoResults!==true" class="" style="">
                 <i class="glyphicon glyphicon-remove"></i> No Results Found
-            </div>
+            </div> -->
 
             <div>
                 <label>3. Research Purpose Statement</label>
             </div>
 
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label>3.1.1 Will this data be used exclusively or partially for a commercial purpose?</label>
+                <div fxFlex></div>
+                <mat-radio-group fxLayout="row" formControlName="forProfit">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="forProfit">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label rp-choice-questions">3.1.2 Please indicate if this study is limited to one gender?
-                </label>
+            <div class="duos-box">
+                <label>3.1.2 Please indicate if this study is limited to one gender?</label>
+                <div fxFlex></div>
+                <mat-radio-group fxLayout="row" formControlName="gender">
+                    <mat-radio-button value='NG'>No</mat-radio-button>
+                    <mat-radio-button value='F'>Female</mat-radio-button>
+                    <mat-radio-button value='M'>Male</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="gender">
-                <mat-radio-button value='NG'>No</mat-radio-button>
-                <mat-radio-button value='F'>Female</mat-radio-button>
-                <mat-radio-button value='M'>Male</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.3 Please indicate if this study is restricted to a pediatric population (under the age of 18)?</label>
+                <div fxFlex></div>
+                <mat-radio-group fxLayout="row" formControlName="pediatric">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="pediatric">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.4 Does the research aim involve the study of illegal behaviors (violence, domestic abuse, prostitution,
                     sexual victimization)?
                 </label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="illegalbehave">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="illegalbehave">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.5 Does the research aim involve the study of alcohol or drug abuse, or abuse of other addictive products?
                 </label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="addiction">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="addiction">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.6 Does the research aim involve the study of sexual preferences or sexually transmitted diseases?</label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="sexualdiseases">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="sexualdiseases">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.7 Does the research aim involve the study of any stigmatizing illnesses?</label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="stigmatizediseases">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="stigmatizediseases">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.8 Does the study target a vulnerable population as defined in 456 CFR (children, prisoners, pregnant
                     women, mentally disabled persons, or [SIGNIFICANTLY] economically or educationally disadvantaged persons)?
                 </label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="vulnerablepop">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="vulnerablepop">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.9 Does the research aim involve the study of Population Origins/Migration patterns?</label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="popmigration">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="popmigration">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.10 Does the research aim involve the study of psychological traits, including intelligence, attention,
                     emotion?
                 </label>
+                <div fxFlex></div>
+
+                <mat-radio-group fxLayout="row" formControlName="psychtraits">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
 
-            <mat-radio-group formControlName="psychtraits">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="duos-box">
                 <label class="control-label rp-choice-questions">3.1.11 Does the research correlate ethnicity, race, or gender with genotypic or other phenotypic variables,
                     for purposes beyond biomedical or health-related research, or in ways that are not easily related to
                     Health? </label>
+                <div fxFlex></div>
+                <mat-radio-group fxLayout="row" formControlName="nothealth">
+                    <mat-radio-button value=true>Yes</mat-radio-button>
+                    <mat-radio-button value=false>No</mat-radio-button>
+                </mat-radio-group>
             </div>
-
-            <mat-radio-group formControlName="nothealth">
-                <mat-radio-button value=true>Yes</mat-radio-button>
-                <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group>
 
         </form>
         <!-- {{ darForm.value | json }} -->
