--- a/src/app/dul-qs/dul-qs.component.css
+++ b/src/app/dul-qs/dul-qs.component.css
@@ -2,3 +2,9 @@
     margin-right: 0.5em;
     padding-right: 0.5em;
 }
+
+.orsp-box {
+    border: 1px solid rgb(180, 180, 180);
+    padding: 1em;
+    border-radius: 0.8em;
+}
