--- a/src/app/dul-info/dul-info.component.html
+++ b/src/app/dul-info/dul-info.component.html
@@ -9,8 +9,9 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
 
-    <textarea style="width: 100%" [(ngModel)]="dulInfo" (change)="onDulInfoChange($event)" rows="10"></textarea>
-
+    <!-- <textarea style="width: 100%" [(ngModel)]="dulInfo" (change)="onDulInfoChange($event)"  rows="10"></textarea> -->
+    <textarea style="width: 100%" [(ngModel)]="dulInfo" rows="10"></textarea>
+    <button mat-raised-button color="primary" (click)="applyChanges()">Apply Changes</button>
   </mat-expansion-panel>
 
 </mat-accordion>
